@@ -1,3 +1,7 @@
+2003-06-11  Callum McKenzie  <callum@physics.otago.ac.nz>
+
+	* gnotski.c: i18n fixes from Christian Neumair (bug #114875).
+
 2003-06-09  William Jon McCann  <mccann@jhu.edu>
 
 	* gnotski.c: Removed separator from dialogs as in HIG.
